# esp32_based_air_monitor

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
certs/: README.md
components/bme680/: bme680.c
components/icons/: CMakeLists.txt  icons.c  icons.h
components/ssd1306/: font8x8_basic.h
docs/: air_monitor_state_machine.drawio
main/: CMakeLists.txt  air_monitor.c
tasks/cloud/: CMakeLists.txt  aws_iot_config.h  aws_iot_task.c  aws_iot_task.h
tasks/display/: CMakeLists.txt  display_task.c  display_task.h
tasks/sensors/: CMakeLists.txt  sensor_task.c  sensor_task.h
tasks/storage/: CMakeLists.txt  logger_task.c  logger_task.h
tasks/time/: CMakeLists.txt  time_tasks.c  time_tasks.h
tasks/wifi/: CMakeLists.txt  wifi_task.h  wifi_tasks.c
